# open-companies-database

./: .gitignore  Dockerfile  INSTALLATION.md  README.md  crustdata_request_payload.json  docker-compose.yml  fetch_crustdata.py  manage.py  pyproject.toml  setup_metabase.sh
companies/: models.py
companies/migrations/: 0001_initial.py  0002_alter_company_categories_and_more.py  0003_companycrustdatacompanyassociation.py
companies/sample_data/: load_sample_data.py
open_companies_database/: asgi.py  settings.py  settings_dev.py  settings_docker.py  urls.py  wsgi.py
