[tool.poetry]
name = "open-companies-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
psycopg2-binary = "^2.9"
requests = "^2.32.1"
tqdm = "^4.62.0"

[tool.poetry.dev-dependencies]
